# e2e-image-collections

./: .dockerignore  .gitignore  Dockerfile  README.md  decryptAll.ts  deno.json  docker-compose.yml  index.html  package-lock.json  package.json  tsconfig.json  vite.config.mts
api/: .gitignore  Cargo.toml  Dockerfile  data.json  deps.ts  main.ts
api/src/: main.rs
nginx/: nginx.conf  nginxconfig.txt
nginx/sites-enabled/: localhost.conf
src/: App.tsx  Collection.tsx  CryptoContext.tsx  EncryptedImage.tsx  Image.tsx  Modal.tsx  Upload.tsx  app.css  collection.ts  encryption.ts  image.css  index.css  main.tsx  modal.css  style.css
src/components/: CacheContext.tsx  CollectionContext.tsx  CryptoContext.tsx  EncryptedImage.tsx
src/components/app/: App.tsx  app.css
src/components/collection/: Collection.tsx  CollectionPage.tsx  collection.ts  useCollection.ts
src/components/image/: FilePreview.tsx  FullImageViewer.tsx  Image.tsx  ImagePage.tsx  ImageViewer.tsx  NewImagePage.tsx  image.css  useDescription.ts  useImage.ts
src/components/password/: Password.tsx
src/components/upload/: Upload.tsx  progress.css  upload.css
src/helpers/: Database.ts  api.ts  classNames.ts  encryption.ts  fetchProgress.ts  safeMime.ts
src/hooks/: useOnScreen.ts
