[package]
name = "rustful-webftp"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
base64 = "0.21.4"
clap = { version = "4.4.6", features = ["derive"] }
digest = "0.10"
poem = "1.3.58"
poem-openapi = { version = "3.0.5", features = ["swagger-ui"] }
sha2 = "0.10"
tokio = { version = "1.33.0", features = ["full"] }
tracing = "0.1.39"
tracing-subscriber = "0.3.17"
